--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,6 +85,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=AppMovilPrime.war
+war.name=AppMovilPrime_OPERACIONES.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
